--- a/webtoeic/src/components/Header/Header.module.scss
+++ b/webtoeic/src/components/Header/Header.module.scss
@@ -18,3 +18,45 @@
     }
   }
 }
+
+.logoRight {
+  position: absolute;
+  top: 0;
+  right: 0;
+  display: flex;
+  align-items: center;
+  padding: 10px;
+
+  .dropdownButton {
+    cursor: pointer;
+    background-color: #f0f0f0;
+    border: none;
+    padding: 8px 15px;
+    border-radius: 5px;
+    font-size: 16px;
+    transition: background-color 0.3s;
+
+    &:hover {
+      background-color: #e6e6e6;
+    }
+  }
+
+  .dropdownMenu {
+    position: absolute;
+    right: 10px;
+    top: 40px;
+    background-color: white;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+
+    p {
+      padding: 10px 20px;
+      margin: 0;
+      &:hover {
+        background-color: #f5f5f5;
+      }
+    }
+  }
+}
