--- a/webtoeic/src/pages/Home/Home.module.scss
+++ b/webtoeic/src/pages/Home/Home.module.scss
@@ -3,7 +3,10 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  // height: 100vh;
+  height: calc(100vh - 100px);
+  margin-top: 150px;
+  // margin-bottom: 50px;
 
   h2 {
     text-align: center;
@@ -14,7 +17,7 @@
   .contentSection {
     display: flex;
     align-items: center;
-    margin-bottom: 5px;
+    // margin-bottom: 5px;
 
     .contentText {
       flex: 1.5;
