--- a/webtoeic/src/pages/Home/IoTPage/IoTNodePage/IoTNodePage/IoTNodePage.module.scss
+++ b/webtoeic/src/pages/Home/IoTPage/IoTNodePage/IoTNodePage/IoTNodePage.module.scss
@@ -3,7 +3,9 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  // height: 100vh;
+  height: calc(100vh - 100px);
+  margin-top: 290px;
 
   h2 {
     color: rgb(233, 63, 63);
