--- a/webtoeic/src/pages/Home/IoTPage/IoTPage.module.scss
+++ b/webtoeic/src/pages/Home/IoTPage/IoTPage.module.scss
@@ -3,8 +3,9 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
-
+  // height: 100vh;
+  height: calc(100vh - 100px);
+  margin-top: 150px;
   h2 {
     text-align: center;
     margin-bottom: 5px;
