--- a/webtoeic/src/pages/Home/IoTPage/IoTNodePage/IoTNodePage/IoTNodePage.module.scss
+++ b/webtoeic/src/pages/Home/IoTPage/IoTNodePage/IoTNodePage/IoTNodePage.module.scss
@@ -7,6 +7,36 @@
   height: calc(100vh - 100px);
   margin-top: 290px;
 
+  @media (max-width: 768px) {
+    margin-top: 400px;
+    .contentSection {
+      flex-direction: column;
+      align-items: center;
+
+      .contentText,
+      .contentImage {
+        flex: none;
+        width: 100%;
+        text-align: center;
+
+        .link {
+          font-size: 1.2rem;
+          margin-bottom: 10px;
+        }
+
+        .image {
+          max-width: 100%;
+        }
+      }
+    }
+  }
+
+  @media (max-width: 576px) {
+    .contentText .link {
+      font-size: 1rem;
+    }
+  }
+
   h2 {
     color: rgb(233, 63, 63);
   }
